--- a/app/src/main/res/layout/fragment_scanner.xml
+++ b/app/src/main/res/layout/fragment_scanner.xml
@@ -50,7 +50,7 @@
             android:id="@+id/btnManual"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_user_icon"
+            android:src="@drawable/ic_search"
             app:tint="#9E9E9E"
             android:padding="8dp"
             android:clickable="true"
