Added Image Searching using Gallery Search Icon, added UI foir adding Items in Admin Inventory, Added Search Icons in History and Inventories

--- a/app/src/main/res/layout/fragment_admin_inventory.xml
+++ b/app/src/main/res/layout/fragment_admin_inventory.xml
@@ -32,6 +32,18 @@
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/btnSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:padding="8dp"
+            android:src="@drawable/ic_magnifyingsearch"
+            app:tint="#FFFFFF" />
+
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
