--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -28,10 +28,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="Current Inventory"
+            android:text="Inventory"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/btnSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:padding="8dp"
+            android:src="@drawable/ic_magnifyingsearch"
+            app:tint="#FFFFFF" />
+
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
