--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/nav_scanner"
         android:icon="@drawable/ic_scanner"
-        android:title="Scanner" />
+        android:title="Scan" />
 
     <item
         android:id="@+id/nav_menu"
